Nav overflow issue

--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -14,6 +14,7 @@
   font-size: small;
 
   background-color: var(--white);
+  overflow: hidden;
 }
 
 .text {
